--- a/style.css
+++ b/style.css
@@ -18,7 +18,12 @@ body {
     display: flex;
     justify-content: space-between;
     border-bottom: solid black 1px;
+    gap: 10px;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .navbar__s1 h1 {
@@ -54,12 +59,32 @@ body {
     gap: 20px;
 }
 
+
+/* My learning popup */
+.mylearning {
+    position: relative;
+}
+
+.mylearning__popup {
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+.mylearning:hover .mylearning__popup{
+    display:block;
+    
+}
 /*Categories*/
 
 .categories {
     padding: 10px;
     display: flex;
-    justify-content: space-around; 
+    justify-content: space-around;
     border-bottom: solid black 1px;
 }
 
@@ -73,9 +98,9 @@ body {
 }
 
 /*Sales image*/
-/* .sale-image {
+.sale-image {
     position: relative;
-} */
+}
 
 .sale-image img {
     width: 100%;
@@ -87,6 +112,7 @@ body {
     left: 10%;
     width: 35%;
     border: solid black 2px;
+    background-color: white;
 }
 
 /*Course card*/
@@ -107,7 +133,7 @@ body {
     flex-grow: 1;
     flex-basis: 250px;
     margin: 5px;
-    }
+}
 
 .course-card img {
     width: 100%;
@@ -133,8 +159,9 @@ body {
     padding: 10px;
     flex-grow: 1;
     flex-basis: 25%;
-    
+
 }
+
 /* popular section*/
 .popular {
     padding: 10px;
@@ -145,8 +172,8 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 20px;
- }
- 
+}
+
 .footer__1 {
     display: flex;
     gap: 20px;
