--- a/style.css
+++ b/style.css
@@ -94,7 +94,15 @@ body {
     color: white;
     border-radius: 30px;
     cursor: pointer;
-    border: solid #A639F0 2px;
+    border: solid #A639F0 1px;
+    
+}
+
+.categories p:hover{
+    transition: 1s;
+    background-color: transparent;
+    color: black;
+    border: solid #A639F0 1px;
 }
 
 /*Sales image*/
@@ -113,8 +121,23 @@ body {
     width: 35%;
     border: solid black 2px;
     background-color: white;
+    padding: 2%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
+@keyframes zoom{
+0%{
+        transform: scale(0);
+        opacity: 0;
+    }    
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }   
+}
 /*Course card*/
 
 .recommended {
