--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body {
 }
 
 
+.navbar__s4{
+    display:none;
+}
+
 /* My learning popup */
 .mylearning {
     position: relative;
@@ -154,7 +158,7 @@ body {
 
 .course-card {
     flex-grow: 1;
-    flex-basis: 250px;
+    flex-basis: 20%;
     margin: 5px;
 }
 
@@ -217,4 +221,29 @@ body {
 
 .footer__1 p {
     margin: 20px;
+}
+
+
+/* Media queries */
+@media screen and ( max-width : 800px) {
+    body{
+        font-size: 10px;
+    }
+    
+}
+
+@media screen and ( max-width : 600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
+    
 }
